[workspace]
members = [
  "server",
  "auth",
  "app",
  "migration-tool",
  "set-password",
]

default-members = ["server"]

[profile.release]
lto = true

[profile.release.package.lldap_app]
opt-level = 's'

[patch.crates-io.opaque-ke]
git = 'https://github.com/nitnelave/opaque-ke/'
branch = 'zeroize_1.5'

[patch.crates-io.lber]
git = 'https://github.com/inejge/ldap3/'

[package.metadata.deb]
name = lldap
version = "0.5.0-alpha"
maintainer = "Dedy MS <dedyms@proton.me>"
copyright = "2023, Dedy MS <dedyms@proton.me>"
license-file = ["LICENSE", "4"]
extended-description = """\
A simple ldap implementation with rust."""
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/cargo-deb", "usr/local/bin/lldap", "755"],
    ["app", "usr/local/bin/lldap/app", "755"],
    ["lldap_config.docker_template.toml", "usr/local/bin/lldap/lldap_config.toml", "644"],
    ["README.md", "usr/share/doc/cargo-deb/README", "644"],
]
